# behemoth

./: Cargo.toml  LICENSE  README.md
benches/: writer_throughput.rs
src/: config.rs  error.rs  index_inmem.rs  lib.rs  reader.rs  transaction.rs  writer.rs  writer_inner.rs
src/codec/: mod.rs  serde_bincode.rs
src/format/: headers.rs  index.rs  mod.rs  tests.rs
src/io/: counting_writer.rs  mod.rs  open_block.rs  payload_reader.rs  payload_sink.rs  reader_block.rs  segment.rs  snapshot.rs  tail_log_cache.rs
src/tests/: bounded_reader.rs  crash_recovery.rs  flush_and_compression.rs  mod.rs  segment_rotation.rs  smoke.rs  tail_with_crash.rs  writer_tail.rs
