[package]
name = "behemoth"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3"
bincode = { version = "2", features = ["serde"], optional = true }
boxcar = "0.2"
clap = { version = "4", features = ["derive"] }
futures-core = "0.3"
futures-util = "0.3"
libc = "0.2"
serde = { version = "1", features = ["derive"], optional = true }
thiserror = "1"
tokio = { version = "1", features = ["fs", "sync", "time", "rt-multi-thread", "macros"] }
zstd = { version = "0", default-features = false, features = ["zstdmt"] }

[dev-dependencies]
criterion = { version = "0.7.0", features = ["async_tokio"] }
tempfile = "3.23.0"

[features]
default = ["serde-bincode"]
serde-bincode = ["serde", "bincode"]

[[bench]]
name = "writer_throughput"
harness = false